fix(header): поправил z-index у хедер
Jira issue: VEGA-707

--- a/src/components/BaseHeader/BaseHeader.css
+++ b/src/components/BaseHeader/BaseHeader.css
@@ -39,6 +39,9 @@
   }
 
   &__Dropdown {
+    --z-index-header-dropdown: 100;
+    z-index: var(--z-index-header-dropdown);
+
     width: 240px;
 
     background-color: var(--color-bg-default);
